# type_annotations

./: Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yaml
advanced/: buffer.py  callable-protocol.py
basic/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  return.py  tuple.py  typealias.py  union.py  variable.py
