[project]
name = "type_annotations"
version = "1.0.0"
description = "Type annotations training"
authors = [
    {name = "Dmitriy Vdovichenko",email = "yotskry@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.394"

